# audio-md

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/audio_md/: __init__.py  __main__.py  cli.py  config.py  console.py  hashing.py  pipeline.py  providers.py  summarize.py  transcribe.py
